--- a/src/main/webapp/pages/ManageForms/ManageForms.html
+++ b/src/main/webapp/pages/ManageForms/ManageForms.html
@@ -24,7 +24,7 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn3" padding="unset 2em">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn3">
                         <wm-panel iconclass="wi wi-assignment" name="panelMyForms" title="My Forms" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid3">
                                 <wm-gridrow name="gridrow6">
@@ -47,7 +47,7 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow14">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn26" padding="unset 2em">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn26">
                         <wm-panel iconclass="wi wi-payment" name="panelFormCategories" title="Form Categories" class="panel-primary">
                             <wm-livegrid formlayout="dialog" name="livegrid1">
                                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.FormCategoriesData.dataSet" navigation="Classic" name="gridFormcategories" filtermode="multicolumn">
