--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
@@ -25,7 +25,7 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow40_2">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn50_2" padding="unset 2em">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn50_2">
                         <wm-panel iconclass="wi wi-info-outline" name="panel2" title="Municipality Info" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid3">
                                 <wm-gridrow name="gridrow6_1">
@@ -111,7 +111,7 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow41_1">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn51_1" padding="unset 2em">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn51_1">
                         <wm-panel iconclass="wi wi-pen" name="panel3" title="Global Email Signature" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid4">
                                 <wm-gridrow name="gridrow15_1">
@@ -134,7 +134,7 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow42">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn52_2" padding="unset 2em">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn52_2">
                         <wm-panel iconclass="wi wi-insert-emoticon" name="panel4" title="Municipality Logo" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid6">
                                 <wm-gridrow name="gridrow43">
