--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -169,7 +169,7 @@
                 <wm-gridrow name="gridrow1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn1">
                         <wm-composite name="composite4_1" margin="1em unset 2em unset">
-                            <wm-label class="col-md-3 control-label" caption="Select Municipality" name="label20" width="40%"></wm-label>
+                            <wm-label class="col-md-3 form-control-static" caption="Select Municipality" name="label20" width="40%" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container4" width="60%">
                                 <wm-select dataset="bind:Variables.StandardUserMunicipalites.dataSet" datafield="All Fields" displayfield="MunicipalityName" datavalue="bind:Variables.StandardUserMunicipalites.firstRecord" name="selectMunicipality" orderby="MunicipalityName:asc"></wm-select>
                             </wm-container>
@@ -179,7 +179,7 @@
                 <wm-gridrow name="gridrow2">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn3">
                         <wm-composite name="composite3">
-                            <wm-label class="col-md-3 control-label" name="label18" caption="Select Category" width="40%"></wm-label>
+                            <wm-label class="col-md-3 form-control-static" name="label18" caption="Select Category" width="40%" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container2" width="60%">
                                 <wm-select name="selectCategory" dataset="bind:Variables.AllCategories.dataSet" datafield="id" displayfield="category" datavalue="bind:Variables.AllCategories.firstRecord.id" orderby="category:asc"></wm-select>
                             </wm-container>
@@ -189,7 +189,7 @@
                 <wm-gridrow name="gridrow3">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn5">
                         <wm-composite name="composite4" margin="2em unset" show="bind:Variables.GetFormTypesByCategoriesAndMunicipalities.dataSet.totalElements != 0">
-                            <wm-label class="col-md-3 control-label" name="label19" caption="Select Form" width="40%"></wm-label>
+                            <wm-label class="col-md-3 form-control-static" name="label19" caption="Select Form" width="40%" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container3" width="60%">
                                 <wm-select name="selectForm" dataset="bind:Variables.GetFormTypesByCategoriesAndMunicipalities.dataSet" datafield="All Fields" displayfield="FormType" datavalue="bind:Variables.GetFormTypesByCategoriesAndMunicipalities.firstRecord"
                                 orderby="FormType:asc"></wm-select>
